# coreclr

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  .vsts-ci.yml  BuildToolsVersion.txt  CMakeLists.txt  CMakeSettings.json  CNAME  CODE_OWNERS.TXT  CONTRIBUTING.md  CompileDefinitions.cmake  CompileOptions.cmake  Directory.Build.props  Directory.Build.targets  ILAsmVersion.txt  ISSUE_TEMPLATE.md  NuGet.config  PATENTS.TXT  README-CrossDac.md  README.md  THIRD-PARTY-NOTICES  THIRD-PARTY-NOTICES.TXT  UpdateDependencies.ps1  UpdatePublishedVersions.ps1  _build-commons.sh  all-index-A-ShobeirMirkhan-MacBook.html  array_init_output.diag  azure-pipelines.yml  basejob.yml  build-and-test-pipeline.yml  build-crossdac.sh  build-lite.cmd  build-packages.cmd  build-packages.sh  build-pipeline.yml  build-test.cmd  build-test.sh  build-tools.cmd  build.cmd  (+79 more)
crosscomponents/: CMakeLists.txt  cmakecmd.bat  etw.cmake  hostAmd64.cmake  targetArm64.cmake  windows-compiler-override.txt
src/binder/: CMakeLists.txt  activitytracker.cpp  applicationcontext.cpp  assembly.cpp  assemblybinder.cpp  binderinterface.cpp  bindertracing.cpp  cdebuglog.cpp  clrprivbinderassemblyloadcontext.cpp  clrprivbindercoreclr.cpp  coreclrbindercommon.cpp  fusionassemblyname.cpp  sources.cmake  textualidentityparser.cpp  utils.cpp  variables.cpp
src/binder/inc/: activitytracker.h  applicationcontext.hpp  assembly.hpp  assembly.inl  assemblybinder.hpp  binderinterface.hpp  bindertracing.h  bindresult.hpp  bindresult.inl  clrprivbinderassemblyloadcontext.h  clrprivbindercoreclr.h  contextentry.hpp  coreclrbindercommon.h  fusionassemblyname.hpp  loadcontext.inl  variables.hpp
src/binder/v3binder_crossgen/: CMakeLists.txt
src/coreclr/hosts/: CMakeLists.txt
src/corefx/: CMakeLists.txt
src/corefx/System.Globalization.Native/: CMakeLists.txt  calendarData.cpp  collation.cpp  config.h.in  configure.cmake  icushim.cpp  locale.cpp  localeStringData.cpp  pal_alloc.h  pal_calendarData.c  pal_casing.c  pal_collation.c  pal_collation.h  pal_icushim.c  pal_icushim.h  pal_locale.c  pal_localeNumberData.c  pal_localeStringData.c  pal_normalization.c  pal_timeZoneInfo.c  timeZoneInfo.cpp
src/corefx/System.Net.Native/: CMakeLists.txt
src/corefx/io/: CMakeLists.txt  corefx_io.cpp
src/debug/createdump/: CMakeLists.txt  crashinfo.cpp  crashinfo.h  createdump.cpp  createdump.h  datatarget.cpp  dumpwriter.cpp  memoryregion.h  threadinfo.cpp
src/dlls/: CMakeLists.txt
src/dlls/clretwrc/: CMakeLists.txt
src/dlls/dbgshim/: CMakeLists.txt  dbgshim.cpp  dbgshim.h  dbgshim.ntdef  dbgshim_unixexports.src
src/dlls/histdbg/: CMakeLists.txt  classfactory.cpp  classfactory.h  histdbg.cpp  histdbg_unixexports.src  historicaldebugging.cpp  historicaldebugging.h  historicaldebugging.inc  log.cpp  log.h  profiler.cpp  profiler.h
src/dlls/mscordac/: CMakeLists.txt  mscordac.src  mscordac_unixexports.src
src/dlls/mscordbi/: CMakeLists.txt  mscordbi.cpp
src/dlls/mscoree/: CMakeLists.txt  mscoree.cpp  mscorwks_ntdef.src  mscorwks_unixexports.src  mscorwks_unixexports_standalone_gc.src  unixinterface.cpp
src/dlls/mscorpe/: CMakeLists.txt  ceefilegenwriter.cpp  pewriter.cpp
src/dlls/mscorrc/: CMakeLists.txt  mscorrc.rc  resource.h
src/dlls/pedecoder/: CMakeLists.txt  portable_pedecoder.cpp  portable_pedecoder.h
src/dlls/profattach/: CMakeLists.txt  profattach.cpp  profattach.h  profattach.ntdef  profattach.rc  profattach_unixexports.src
src/gc/: CMakeLists.txt  gc.cpp  gc.h  gcallocator.cpp  gcallocator.h  gccommon.cpp  gcconfig.cpp  gcconfig.h  gcdesc.h  gcee.cpp  gceesvr.cpp  gceewks.cpp  gcenv.ee.standalone.inl  gcenv.unix.cpp  gcenv.windows.cpp  gcevents.cpp  gcevents.def  gcevents.h  gceventstatus.cpp  gceventstatus.h  gchandletable.cpp  gchandletableimpl.h  gcimpl.h  gcinterface.dac.h  gcinterface.dacvars.def  gcinterface.ee.h  gcinterface.h  gcload.cpp  gcpriv.h  gcrecord.h  gcscan.cpp  gcstatistics.cpp  gcstatistics.h  gcsvr.cpp  gctoeeinterface.h  gcwks.cpp  handletable.cpp  handletable.h  handletablecore.cpp  handletablepriv.h  (+15 more)
src/jit/: .clang-format  CMakeLists.txt  ICorJitInfo_API_names.h  ICorJitInfo_API_wrapper.h  ICorJitInfo_API_wrapper.hpp  _typeinfo.h  alloc.cpp  alloc.h  arraystack.h  assertionprop.cpp  bitset.h  bitsetasshortlong.h  bitsetasuint64.h  bitsetasuint64inclass.h  bitsetops.h  block.cpp  block.h  codegen.h  codegenarm.cpp  codegenarm64.cpp  codegenarmarch.cpp  codegenclassic.h  codegencommon.cpp  codegeninterface.h  codegenlegacy.cpp  codegenlinear.cpp  codegenlinear.h  codegenxarch.cpp  compiler.cpp  compiler.h  compiler.hpp  compmemkind.h  compphases.h  conventions.txt  copyprop.cpp  copyprop.h  dataflow.h  decomposelongs.cpp  decomposelongs.h  earlyprop.cpp  (+138 more)
src/linux-profiler/: CMakeLists.txt  classfactory.cpp  classfactory.h  dllmain.cpp  guid.h  log.h  profiler.cpp  profiler.h  profilerinfo.cpp  profilerinfo.h  profilermanager.cpp  profilermanager.h  tracelog.cpp  tracelog.h
src/pal/: CMakeLists.txt
src/tools/: CMakeLists.txt  Directory.Build.props  build.proj  dir.targets
src/utilcode/: CMakeLists.txt  appxutil.cpp  ccomprc.cpp  check.cpp  clrhost.cpp  clrhost_nodependencies.cpp  configuration.cpp  dacutil.cpp  debug.cpp  delayloadhelpers.cpp  genericstackprobe.cpp  hostimpl.cpp  ilformatter.cpp  jithost.cpp  loaderheap.cpp  loadrc-impl.cpp  log.cpp  longfilepathwrappers.cpp  md5.cpp  pedecoder.cpp  peinformation.cpp  perflog.cpp  posterror.cpp  prettyprintsig.cpp  regutil.cpp  safewrap.cpp  securitywrapper.cpp  sources.cmake  sstring.cpp  stacktrace.cpp  stresslog.cpp  sxshelpers.cpp  towlowerinvariant.cpp  towlowerinvariant.cs  util.cpp  util_nodependencies.cpp  utilcode.cmake  utsem.cpp  winfix.cpp  yieldprocessornormalized.cpp
src/xmlparser/: CMakeLists.txt  _rawstack.cpp  _rawstack.h  _reference.cpp  _reference.h  _unknown.h  bufferedstream.cpp  bufferedstream.h  charencoder.cpp  charencoder.h  codepage.h  core.h  encodingstream.cpp  encodingstream.h  makefile  sources  xmlhelper.cpp  xmlhelper.h  xmlparser.cpp  xmlparser.hpp  xmlstream.cpp  xmlstream.h
(+17871 files in other folders)
