if(WIN32)
    add_subdirectory(clretwrc)
endif(WIN32)
add_subdirectory(dbgshim)
add_subdirectory(mscordbi)
add_subdirectory(mscordac)
if (NOT CLR_CROSS_COMPONENTS_BUILD)
    add_subdirectory(mscoree)
    add_subdirectory(mscorpe)
endif()
if (NOT CLR_CROSS_COMPONENTS_BUILD OR NOT WIN32)
    add_subdirectory(mscorrc)
endif()
