include_directories(inc)

if(WIN32)
  add_subdirectory(corerun)
  add_subdirectory(coreconsole)
  add_subdirectory(coreshim)
else(WIN32)
  include_directories(${CMAKE_CURRENT_BINARY_DIR})
  include(unixcoreruncommon/configure.cmake)
  add_subdirectory(unixcorerun)
  add_subdirectory(unixcoreconsole)
  if(CLR_CMAKE_PLATFORM_DARWIN)
    add_subdirectory(osxbundlerun)
  else()
    if (CLR_CMAKE_BUILD_COREBUNDLE)
      add_subdirectory(unixcorebundle)
    endif()
  endif(CLR_CMAKE_PLATFORM_DARWIN)
endif(WIN32)
